# Number_plates_project

./: .env.example  .gitignore  .pylintrc  LICENSE  README.md  docker-compose.yml  pyproject.toml
bd_data/pgdata/global/: 1260  pg_control  pg_internal.init
bd_data/pgdata/pg_stat/: pgstat.stat
data_science/: license_plate_end.ipynb  license_plate_v2.ipynb  model_use_ai_based_indian_plate_detection.ipynb  model_use_ai_based_indian_plate_detection_other.ipynb  model_use_mnist.ipynb
data_science/model/: model_use_mnist.h5  model_use_mnist.keras
data_science/plate_recognition/: generate_dataset_imgs.ipynb  smbls_captcha_method_v1.ipynb  smbls_captcha_method_v2.ipynb  smbls_recogn_based_on_captcha_method.keras
data_science/symbols_segmentation/: smbls_only_xs_v6.ipynb
data_science/tests/: test_module_accuracy.ipynb
number_plates/: manage.py  settings.py
number_plates/cars/: admin.py  forms.py  models.py  repository.py  urls.py  views.py
number_plates/number_plates/: asgi.py  settings.py  urls.py  wsgi.py
number_plates/number_plates_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
number_plates/parking/: admin.py  apps.py  forms.py  models.py  repository.py  urls.py  views.py
number_plates/parking_rates/: admin.py  apps.py  models.py  urls.py  views.py
number_plates/parking_sessions/: admin.py  apps.py  models.py  urls.py
number_plates/payments/: admin.py  models.py  repository.py  tests.py  urls.py  views.py
number_plates/users/: forms.py  models.py  tests.py  urls.py  views.py
number_plates/utils/: __init__.py
(+1467 files in other folders)
