[tool.poetry]
name = "number-plates-project"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Alex-Tsyb <113551674+Alex-Tsyb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.4.0"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
