[tool.poetry]
name = "number-plates-project"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Alex-Tsyb <113551674+Alex-Tsyb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.4.0"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
tensorflow = "^2.17.0"
tensorflow-intel = "^2.17.0"
keras = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
